# OpenLuminaire-Software

./: .gitignore  .gitmodules  CHANGELOG-aerolamp-v1.2.md  README.md
esp/: README.md  flash.sh
esp32/: flash.sh
legacy/v3/: main.c  radar.c  radar.h
legacy/v4/: README.md
legacy/v4/rp2040/: buttons.h  fan.h  flash.sh  imu.c  mag.c  main.c  main.h  menu.c  menu.h  radio.h  sense.c  usbpd.c
rp/: CMakeLists.txt  board.c  board.h  buttons.c  buttons.h  d_uart_cmd.c  d_uart_cmd.h  debug_bridge.c  debug_bridge.h  display.c  display.h  fan.c  fan.h  image.c  image_basic.c  image_default.c  image_dimmable.c  imu.c  imu.h  lamp.c  lamp.h  lamp_orig.c  lv_conf.h  m_cmd.c  m_cmd.h  mag.c  mag.h  main.c  main.h  menu.c  menu.h  persistance.c  persistance.h  pins.h  png_to_csource.c  radar-test.uf2  radar.c  radar.h  radio.c  radio.h  (+16 more)
rp/released_bin/: DevKitFW-3JUL2025-508acc.uf2  DevKitFW-3JUL2025-6b33cb.uf2  DevKitFW-3JUL2025-fba956.uf2  DevKitFW-8JUL2025-2ea3a5-v0.1.0.uf2
rp2040/: buttons.c  fan.c  flash_pt.sh  imu.h  lamp.c  lamp.h  radar.c  radar.h  radio.c  st7789.c  usbpd.h
v3/: CMakeLists.txt  README.md  flash.sh  flash_ocd.sh  gdb.txt  pins.h
v4/esp32/main/: hello_world_main.c
v4/rp2040/: CMakeLists.txt  flash_ocd.sh  image.c  mag.h
